[package]
name = "farbe"
version = "0.1.0"
description = "A library for working with retro image formats"
homepage = "https://crates.io/crates/farbe"
repository = "https://github.com/retrofoundry/farbe"
keywords = ["image", "n64", "retro"]
readme = "README.md"
edition = "2021"
license-file = "LICENSE"

[lib]
name = "farbe"
crate-type = ["staticlib", "cdylib", "lib"]

[features]

[dependencies]
anyhow = "1.0.70"
byteorder = "1.4.3"
png = "0.17.7"
